UPDATE: changed auction detail properties view. FIX: fixed "my offer" page z-index issue with profile dropdown

--- a/Algoverse-app/src/app/modules/profile/items/items.component.scss
+++ b/Algoverse-app/src/app/modules/profile/items/items.component.scss
@@ -1,6 +1,6 @@
 .main {
   .collection-header {
-    z-index: 1000;
+    z-index: 100;
     width: 100%;
     box-sizing: border-box;
     h3 {
